pkg/ibmvpc/examples/acl_testing5_all_vpcs_subnetsBased_withPGW.txt
Connectivity for VPC test-vpc-ky1
combined connections between subnets:
sub1-1-ky => Public Internet 8.8.8.8/32 : protocol: UDP dst-ports: 53
sub1-1-ky => sub1-2-ky : protocol: TCP
sub1-1-ky => sub1-3-ky : protocol: TCP
sub1-1-ky => sub3-1-ky : protocol: ICMP icmp-type: 0 icmp-code: 0
sub1-2-ky => sub1-1-ky : protocol: TCP
sub1-2-ky => sub1-3-ky : protocol: TCP
sub1-3-ky => sub1-1-ky : protocol: TCP
sub1-3-ky => sub1-2-ky : protocol: TCP
sub2-1-ky => Public Internet 8.8.8.8/32 : protocol: UDP dst-ports: 53
sub2-1-ky => sub2-2-ky : All Connections
sub2-1-ky => sub3-1-ky : protocol: ICMP icmp-type: 0 icmp-code: 0; protocol: TCP src-ports: 443
sub2-2-ky => sub2-1-ky : All Connections
sub3-1-ky => sub1-1-ky : protocol: ICMP icmp-type: 0 icmp-code: 0
sub3-1-ky => sub2-1-ky : protocol: ICMP icmp-type: 0 icmp-code: 0; protocol: TCP dst-ports: 443

connections are stateful unless marked with *
